--- a/Views/Blog/InsertBlog.cshtml
+++ b/Views/Blog/InsertBlog.cshtml
@@ -23,7 +23,7 @@
         @Html.ValidationMessageFor(model => model.PostContent)
     </div>
 
-    <button type="submit" class="btn btn-primary">Create</button>
+    <button type="submit" class="btn btn-primary" id="loginbutton">Create</button>
 }
 
 
