--- a/Views/Blog/UpdateBlog.cshtml
+++ b/Views/Blog/UpdateBlog.cshtml
@@ -21,7 +21,7 @@
         @Html.ValidationMessageFor(model => model.PostContent)
     </div>
 
-    <button type="submit" class="btn btn-primary">Save Changes</button>
+    <button type="submit" class="btn btn-primary" id="loginbutton">Save Changes</button>
 }
 
 
