--- a/Views/Calculator/CalculatorScores.cshtml
+++ b/Views/Calculator/CalculatorScores.cshtml
@@ -9,8 +9,31 @@
     <title>Calculator Score</title>
 </head>
 <body>
-    <h2>Your Affinity Harmony Score</h2>
-    <p>Your Relationship Harmony score: @ViewData["UserAverageScore"]% You are a match!</p>
+    <main>
+        <h2 class="scoretext"><b>Your Relationship Harmony Score</b></h2>
+        <h3 class="scoretx"><b>You are a match!</b></h3>
+        <main class="container" id="calscores">
+            <div class=" container-fluid" id="scorebackgd">
+                <div class="score">
+                    <lebel onclick='width=500'>@ViewData["UserAverageScore"]%</lebel>
+                </div>
+                </div>
+        </main>
+        <div>
+        <h4>Here are some recommended books for your relationship growth!</h4>
+        <div class="container-fluid" id="recombooks">
+            <a href="https://www.amazon.com/Hope-Your-Marriage-Experience-Greatest/dp/0785216456/ref=sr_1_1?crid=I0I07QDLRJR0&dib=eyJ2IjoiMSJ9.rttgWDw-rV2VUopqWQWEabbDpsD0ntqHmxCIukrcoE0JSBZ8H9oleAPqiwHQsVUUtayyO7jB4ISuM3VaZYX4rs0N_X6jyL8f1cMEJVxH3dxMNFFLgZgZTBig8fXgnCqGAg7tdFy6BGxzs82Bh6al_v_x2aW7z3HXcXdwB55PpCgQWWWdl_Fi58RlMIcp7ELrJOz6p-TuxwNc7q8-4jK3aRAx6qBUdqC8pUjGRVoI9Mw.wKg00heU3IcNBP9z7u1VFVR410_KrtRQGn3xnLBt2Gg&dib_tag=se&keywords=hope+for+your+marriage&qid=1712899478&sprefix=%2Caps%2C105&sr=8-1"> <img id="picture" src="/Images/Hopeformarraige.jpg" height="150" width="150" alt="" name="Hope For Your Marriage"> </a>
+            <a href="https://www.amazon.com/Naked-Healthy-Uncover-Lifestyle-Marriage-ebook/dp/B08NXT6F2B/ref=tmm_kin_swatch_0?_encoding=UTF8&dib_tag=se&dib=eyJ2IjoiMSJ9.cVQZAr41uPDTjY3fincxqBa5IFWUPwZoMh-b1GMTwh13ZgUgfR3U6LvHULW0G_U2L5jERLXDqNoj2wz3uPaJa5O-Wt2xycHHLdM7YX_nlG_5KYTBRz6f2i4LPWZH7Zw1CROAdHRdsFFEZ7ZTULzsKxcNRkUfKw_ctdy03AjxrOutEOakPaTr0XoyZHbidhVrGpNzbHHxSIAUUnz-TCb4gfbp8E_TeMS7QaF7Zi2_qc0VPdqrTYdyMeYLcFHSMf7U-r3rpc9aSKDDj-klUYKLpW1mbBULoT8IeP0Ueqgz_uE.VwjVNO2jbdknucSAu5BiY8hWTCemgFz8Dor5MD3_bbo&qid=1712898701&sr=8-1"> <img id="picture" src="/Images/Nakedhealthy.jpg" height="150" width="150" alt="" name="Naked & Healthy"> </a>
+            <a href="https://www.amazon.com/s?k=hope+heals&crid=6M1XGCUNENIX&sprefix=hopes+heals%2Caps%2C122&ref=nb_sb_ss_sc_1_10"> <img id="picture" src="/Images/Hopeheals.jpg" height="150" width="150" alt="" name="Hope Heals"> </a>
+        </div>
+        <p>
+            Remember 1 Corinthians 13:4–8a (ESV) Love is patient and kind,love does not envy or boast
+            it is not arrogant or rude.\n It does not insist on its own way it is not irritable or resentful
+            it does not rejoice at wrongdoing, but rejoices with the truth
+        </p>
+    </div>
+    </main>
 </body>
+
 </html>
 
